[package]
name = "keep-in-touch"
authors = ["louib <code@louib.net>"]

version = "0.1.0"
edition = "2021"
# rust-version = "1.60"

repository = "https://github.com/louib/keep-in-touch/"
description = "Contact manager based on the KDBX4 encrypted database format"

keywords = [
  "keepass",
  "vcard",
  "cli",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = { version = "1" }

ical = "0.7"
rpassword = { version = "7" }
keepass = { git = "https://github.com/sseemayer/keepass-rs", features = ["save_kdbx4"] }
