[package]
name = "keep-in-touch"
authors = ["louib <code@louib.net>"]

version = "0.1.0"
edition = "2021"
# rust-version = "1.60"

repository = "https://github.com/louib/keep-in-touch/"
description = "Contact manager based on the KDBX4 encrypted database format"

keywords = [
  "keepass",
  "vcard",
  "cli",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1" }
shellwords = "1.1.0"

ical = "0.8"
rpassword = { version = "7" }
keepass = { git = "https://github.com/sseemayer/keepass-rs", branch = "support_entry_update", features = ["save_kdbx4"] }
# keepass = { path = "../keepass-rs", features = ["save_kdbx4"] }
