[package]
name = "keep-in-touch"
authors = ["louib <code@louib.net>"]

version = "0.1.0"
edition = "2021"
# rust-version = "1.60"

repository = "https://github.com/louib/keep-in-touch/"
description = "Contact manager based on the KDBX4 encrypted database format"

keywords = [
  "keepass",
  "vcard",
  "cli",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1" }
shellwords = { version = "1", default-features = false }

rpassword = { version = "7" , default-features = false }

rustyline = { version = "13", default-features = false }

[dependencies.keepass]
version = "0.7"
# git = "https://github.com/sseemayer/keepass-rs"
# Using my merge branch until the fixes to the update_history function are merged.
# branch = "add_merge_feature"
# path = "../keepass-rs"
features = ["save_kdbx4", "challenge_response"]
